adding another message to the home page

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,1 +1,3 @@
 <h1> This will be our home page. </h1>
+
+<h3> We are the infurating wookies and we are going to make some awesome health tools.</h3>
