--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,11 @@
           <ul class="nav navbar-nav">
             <li><%= link_to "Link1", "/path1"  %></li>
             <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <% if current_user %>
+              <li><%= link_to "Sign Out",  destroy_user_session_path, method: :delete %></li>
+            <% else %>
+              <li><%= link_to "Sign In",  new_user_session_path %></li>
+            <% end %>
           </ul>
         </div>
       </div>
