--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
         <a class="navbar-brand" href="#">Cs6440HitTeam30</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
+            <li><%= link_to "Medications", medications_path  %></li>
             <li><%= link_to "Link2", "/path2"  %></li>
             <% if current_user %>
               <li><%= link_to "Sign Out",  destroy_user_session_path, method: :delete %></li>
