--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -3,3 +3,7 @@
 <p> We will make this prettier when we can, but for now you just get the data </p>
 
 <p> <%= @medication_json %> </p>
+
+<p> Here is the info about the specific medications this patient is on: </p>
+
+<p> <%= @specific_medications %> </p>
