adding state dropdown helpers

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
 
   <div class="field">
     <%= f.label :state%><br />
-    <%= f.text_field :state, autofocus: true %>
+    <%= f.select :state, us_states %>
   </div>
 
   <div class="field">
