--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -2,7 +2,10 @@
 
 <p> We will make this prettier when we can, but for now you just get the data </p>
 
-<p> <%= @medication_json %> </p>
+<% @medication_json['entry'].each do |medication| %>
+  <strong>Dosage: </strong> <%= medication['resource']['dosageInstruction'][0]['doseQuantity']['value'] %> <%= medication['resource']['dosageInstruction'][0]['doseQuantity']['units'] %>
+
+<% end %>
 
 <p> Here is the info about the specific medications this patient is on: </p>
 
