--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,8 +48,9 @@
         <a class="navbar-brand" href="<%= root_path%>">Cs6440HitTeam30</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Medications", medications_path  %></li>
             <% if current_user %>
+              <li><%= link_to "Basic Info", basic_info_index_path  %></li>
+              <li><%= link_to "Medications", medications_path  %></li>
               <li><%= link_to "Sign Out",  destroy_user_session_path, method: :delete %></li>
             <% else %>
               <li><%= link_to "Sign In",  new_user_session_path %></li>
