--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,4 +1,4 @@
-<h1> Welcome to the Infurating Wookies Health Tool </h1>
+<%= image_tag "banner.jpg" %>
 
 <div class="col-md-4" style="text-align:center;">
   <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/develop.svg" style="height:32px">
