--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,7 @@
         <a class="navbar-brand" href="<%= root_path%>">Cs6440HitTeam30</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
+            <li><%= link_to "About Us", about_us_pages_path  %></li>
             <% if current_user %>
               <li><%= link_to "Basic Info", basic_info_index_path  %></li>
               <li><%= link_to "Medications", medications_path  %></li>
