--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,6 +52,7 @@
             <% if current_user %>
               <li><%= link_to "Basic Info", basic_info_index_path  %></li>
               <li><%= link_to "Medications", medications_path  %></li>
+              <li><%= link_to "Record", observations_path %></li>
               <li><%= link_to "Sign Out",  destroy_user_session_path, method: :delete %></li>
             <% else %>
               <li><%= link_to "Sign In",  new_user_session_path %></li>
