making the Gender selection on sign up a drop down

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
 
   <div class="field">
     <%= f.label :gender %><br />
-    <%= f.text_field :gender, autofocus: true %>
+    <%= f.select :gender, [['Male', 'Male'], ['Female', 'Female'], ['Other', 'Other']], autofocus: true %>
   </div>
 
   <div class="field">
