--- a/app/views/basic_info/index.html.erb
+++ b/app/views/basic_info/index.html.erb
@@ -32,5 +32,14 @@
   <br>
 <% end %>
 
+<% if @bmi_info['total'] > 0 %>
+    <h4> BMI: </h4>
+    <strong> Measurement: </strong> <%= @bmi_info['entry'].last['resource']['valueQuantity']['value'] %>
+    <strong><%= @bmi_info['entry'].last['resource']['valueQuantity']['units'] %> </strong>
+    <br>
+    <strong> Time of Measurement: </strong>
+    <%= DateTime.parse(@bmi_info['entry'].last['resource']['appliesDateTime']).to_date.to_s %>
+    <br>
+<% end %>
 
 <%= link_to 'Export as JSON', basic_info_index_path(format: :json) %>
