--- a/app/views/pages/about_us.html.erb
+++ b/app/views/pages/about_us.html.erb
@@ -2,15 +2,18 @@
 
 <h4> Team Members (listed alphabetically) </h4>
 <br>
-<strong> Bhargavi Damodaran		</strong>| bdamodaran3		| bdamodaran@gatech.edu
+<ul>
+	<li> <strong> Bhargavi Damodaran</strong>| bdamodaran3		| bdamodaran@gatech.edu </li>
 <br>
-<strong> Guharaman Janakiraman </strong>	| jguharaman 		| jguharaman@gmail.com
+	<li><strong> Guharaman Janakiraman </strong>| jguharaman 		| jguharaman@gmail.com</li>
 <br>
-<strong> Mohit Nanda 		</strong>	| mnanda3 			| mht.nanda@gmail.com
+	<li><strong> Mohit Nanda </strong>| mnanda3 			| mht.nanda@gmail.com</li>
 <br>
-<strong> Nate Holland 		</strong>	| nholland8			| natesholland@gatech.edu
+	<li><strong> Nate Holland</strong>| nholland8			| natesholland@gatech.edu</li>
 <br>
-<strong> Nebiyou Weldemeskel		</strong>| nweldemeskel3		| nebsam24@gmail.com
+	<li><strong> Nebiyou Weldemeskel</strong>| nweldemeskel3		| nebsam24@gmail.com</li>
 <br>
-<strong> Purity Mugambi		</strong>	| pmugambi3		| purity@gatech.edu
+	<li><strong> Purity Mugambi	</strong>| pmugambi3		| purity@gatech.edu</li>
 <br>
+</ul>
+
