--- a/app/assets/stylesheets/medications.scss
+++ b/app/assets/stylesheets/medications.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the medications controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+html, body {
+    margin: 0;
+    padding: 0;
+	background: #ebebeb;
+	position: relative;
+	//text-align: center;
+ }
