--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,31 @@
-<h2>Sign up</h2>
+<h2 class="text-center">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
     <%= f.label :firstname %><br />
-    <%= f.text_field :firstname, autofocus: true %>
+    <%= f.text_field :firstname, autofocus: true, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :lastname %><br />
-    <%= f.text_field :lastname, autofocus: true %>
+    <%= f.text_field :lastname, autofocus: true, class: "form-control"%>
   </div>
 
   <div class="field">
     <%= f.label :gender %><br />
-    <%= f.select :gender, [['Male', 'Male'], ['Female', 'Female'], ['Other', 'Other']], autofocus: true %>
+    <%= f.select :gender, [['Male', 'Male'], ['Female', 'Female'], ['Other', 'Other']], autofocus: true, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :address%><br />
-    <%= f.text_field :address, autofocus: true %>
+    <%= f.text_field :address, autofocus: true, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true %>
+    <%= f.text_field :city, autofocus: true, class: "form-control" %>
   </div>
 
   <div class="field">
@@ -35,17 +35,17 @@
 
   <div class="field">
     <%= f.label :postal_code%><br />
-    <%= f.text_field :postal_code, autofocus: true %>
+    <%= f.text_field :postal_code, autofocus: true, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :birthday%><br />
-    <%= f.date_field :birthday, autofocus: true %>
+    <%= f.date_field :birthday, autofocus: true, class: "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+    <%= f.email_field :email, autofocus: true, class: "form-control" %>
   </div>
 
   <div class="field">
@@ -53,16 +53,16 @@
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+    <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
   </div>
 
   <div class="field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
   </div>
-
+  <br>
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up", class:"btn btn-primary btn-lg" %>
   </div>
 <% end %>
 
