condition related changes

--- a/app/views/observations/index.html.erb
+++ b/app/views/observations/index.html.erb
@@ -4,7 +4,7 @@
   <%= label_tag(:height, "Height (cm):") %>
   <%= number_field_tag(:height) %>
   <br>
-  <%= label_tag(:height, "Weight (kg):") %>
+  <%= label_tag(:weight, "Weight (kg):") %>
   <%= number_field_tag(:weight) %>
   <%= submit_tag("Submit") %>
 <% end %>
