adding small disclaimer about reloading the graph page

--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -65,6 +65,8 @@
 
 <h2> Your Health Graphs </h2>
 
+<small> *note you meed to refresh the page </small>
+
 <div id="weight_chart_div"></div>
 <br>
 <div id="bmi_chart_div"></div>
