--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,7 +53,7 @@
             <% if current_user %>
               <li><%= link_to "Basic Info", basic_info_index_path  %></li>
               <li><%= link_to "Medications", medications_path  %></li>
-              <li><%= link_to "Record", observations_path %></li>
+              <li><%= link_to "Observations", observations_path %></li>
               <li><%= link_to "Conditions", conditions_path %></li>
               <li><%= link_to "Graphs", graphs_path %></li>
               <li><%= link_to "Sign Out",  destroy_user_session_path, method: :delete %></li>
