re-styled the observations page

--- a/app/views/conditions/index.html.erb
+++ b/app/views/conditions/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-center"> Record Conditions </h2>
+<h2> Record Conditions </h2><br>
 <style>
     div.form{
         position: relative;
@@ -39,6 +39,6 @@
         <input type="radio" name="coronary" value="no" checked><text style="color:black; text-align:left;">&nbsp;No</text>
       </li>
     </div>
-    <%= submit_tag("Submit") %>
+    <%= submit_tag("Submit", class:"text-center") %>
     </form>
 <% end %>
