--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-center"> Your prescriptions </h2>
+<h2> Your prescriptions </h2><br>
 
 <% if @medication_json['total'] > 0 %>
   <% @medication_json['entry'].each do |medication| %>
