--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -1,19 +1,66 @@
-<%= image_tag "banner.jpg" %>
-<br>
-<div class="col-md-4" style="text-align:center;">
-  <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/develop.svg" style="height:32px">
+<div class="page landing wrapper">
+    <div class="landing-head">
+        <div class="container">
+            <article id="landing-sign-in" class="grid">
+                <section id="sign-in" class="half">
+                    <header id="learn-more">
+                        <h1 >Health <span style="color:#7bc144;">Portal</span></h1>
+                        <p id="slogan" class="slogan p">Take control of your health.<sup>SM</sup></p>
+                    </header>
+                    <form id="login-form" method="post" action="/users/sign_in">
+                        
+                        <input type="hidden" value="" name="csrfmiddlewaretoken" />
+                        <fieldset>
+                          <div class="field" id="field_login_username">
+                            <label for="user_email">Email  address </label>
+                              <div class="input"><input autofocus="autofocus" class="form-control" type="email" value="" name="user[email]" id="user_email" />
+                              </div>
+                          </div>
+                        <div class="field" id="field_login_password">
+                          <label for="login_password">Password</label>
+                            <div class="input">
+                              <input autocomplete="off" class="form-control" type="password" name="user[password]" id="user_password" />
+                              <span class="help-text">
+                                <a href="/forgot-password" title="Recover a lost password" tabindex="-1">Forgot Password?</a></span>
+                              </div>
 
-  <p>Log in to your account to see your records anytime</p>
+                            </fieldset>
+                        <fieldset class="cage">
+                            <button class="secondary large" type="submit">Sign In</button>
+                        </fieldset>
+                    </form>
+                </section>
+                <section id="why-a-phr" class="promo-item half">
+					<figure class="half">				
+                    <img src="https://d32bg403aomlve.cloudfront.net/s/ch-static/img/health_in_one_place.222b073b8422.png" />
+					</figure>
+                </section>
+            </article>
+        </div>
+    </div>
+    <div class="container">
+        <span id="learn-more-arrow"></span>
+        <article id="learn-more">
+            <section  class="grid alternating">
+                <div class="col1of3" style="text-align:center;">
+                    <h1>All your health in one place</h1>
+                    <p> Health portal provides one place for all of the information you need to manage your health</p> 
+                
+				</div>
+				<div class="col1of3" style="text-align:center;">
+					<h1 >Track &amp; improve your health</h1>
+                    <p>Capturing personal measures helps you and your doctor proactively manage your health trends and track progress against your health goals.  </p>
+                    
 
-</div>
-<div class="col-md-4" style="text-align:center;">
-  <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/develop.svg" style="height:32px">
-  <p>Connect with your doctor to see key health information recorded during your visits</p>
+				</div>
+				<div class="col1of3" style="text-align:center;">
+					<h1>Your health, on-the-go</h1>
+                    <p>Health Portal gives you access to your personal health information wherever you have Internet access. Changed doctors and need to provide your current 	medications? No problem, review it in Health Portal.</p>
+                    <p>Your information, when and where you need it.</p>
 
+            </div>
+		</section>
 
-</div>
-<div class="col-md-4" style="text-align:center;">
-  <img src="https://s3.amazonaws.com/codecademy-content/projects/broadway/develop.svg" style="height:32px">
-  <p>Access your health records anytime</p>
-
+        </article>
+    </div>
 </div>
