--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -23,7 +23,10 @@
                             <div class="input">
                               <input autocomplete="off" class="form-control" type="password" name="user[password]" id="user_password" />
                               <span class="help-text">
-                                <a href="/forgot-password" title="Recover a lost password" tabindex="-1">Forgot Password?</a></span>
+                                <a href="/forgot-password" title="Recover a lost password" tabindex="-1">Forgot Password?</a>
+                                <br>
+                                <br>
+                                <a href="/users/sign_up" title="Sign up" tabindex="-1">Sign up</a></span>
                               </div>
 
                             </fieldset>
