Made modifications to other pages

--- a/app/views/basic_info/edit.html.erb
+++ b/app/views/basic_info/edit.html.erb
@@ -1,3 +1,6 @@
+<div class="landing-head">
+
+	<div class="container">
 <%= simple_form_for @user, url: basic_info_update_path do |f| %>
 
 <div class="field">
@@ -49,3 +52,6 @@
   <%= f.submit %>
 
 <% end %>
+	</div>
+
+</div>
