--- a/app/views/basic_info/index.html.erb
+++ b/app/views/basic_info/index.html.erb
@@ -1,3 +1,6 @@
+<div class="landing-head">
+
+	<div class="container">
 <h2 class="text-center"> Basic info </h2>
 
 <h4> Patient: </h4>
@@ -61,3 +64,6 @@
 <%= link_to 'Export as JSON', basic_info_index_path(format: :json) %><br>
 <br>
 <%= link_to 'Edit', basic_info_edit_path %><br>
+	</div>
+
+</div>
