--- a/app/views/conditions/index.html.erb
+++ b/app/views/conditions/index.html.erb
@@ -1,3 +1,6 @@
+<div class="landing-head">
+
+	<div class="container">
 <h2> Record Conditions </h2><br>
 <style>
     div.form{
@@ -42,3 +45,8 @@
     <%= submit_tag("Submit", class:"text-center") %>
     </form>
 <% end %>
+
+	</div>
+
+</div>
+
