--- a/app/views/graphs/index.html.erb
+++ b/app/views/graphs/index.html.erb
@@ -63,6 +63,10 @@
   drawBmiChart();
 </script>
 
+<div class="landing-head">
+
+	<div class="container">
+
 <h2> Your Health Graphs </h2>
 
 <small> *note you meed to refresh the page </small>
@@ -75,3 +79,8 @@
   <h4> We're sorry, we don't have enough info to graph for you. Please record your
     height and weight. </h4>
 <% end %>
+
+	</div>
+
+</div>
+
