--- a/app/views/observations/index.html.erb
+++ b/app/views/observations/index.html.erb
@@ -1,3 +1,6 @@
+<div class="landing-head">
+
+	<div class="container">
 <h2 class="text-center"> Record your new height and weight </h2><br>
 
 <%= form_tag("/observations", method: "post") do |f|%>
@@ -9,3 +12,7 @@
   <br><br>
   <%= submit_tag("Submit", class:"btn btn-primary btn-lg") %>
 <% end %>
+
+	</div>
+
+</div>
