--- a/app/views/medications/index.html.erb
+++ b/app/views/medications/index.html.erb
@@ -1,3 +1,7 @@
+
+<div class="landing-head">
+
+	<div class="container">
 <h2> Your prescriptions </h2><br>
 
 <% if @medication_json['total'] > 0 %>
@@ -11,3 +15,7 @@
 
 
 <%= link_to 'Export as JSON', medications_path(format: :json) %>
+	</div>
+
+</div>
+
