applied theme through out the application

--- a/app/views/basic_info/edit.html.erb
+++ b/app/views/basic_info/edit.html.erb
@@ -1,6 +1,8 @@
 <div class="landing-head">
+  <div class="container" id="login-form" >
 
-	<div class="container">
+    <div class="half">
+
 <%= simple_form_for @user, url: basic_info_update_path do |f| %>
 
 <div class="field">
@@ -54,4 +56,5 @@
 <% end %>
 	</div>
 
+</div>
 </div>
