--- a/app/views/observations/index.html.erb
+++ b/app/views/observations/index.html.erb
@@ -1,6 +1,7 @@
 <div class="landing-head">
+	  <div class="container" id="login-form" >
+      <div class="half">
 
-	<div class="container">
 <h2 class="text-center"> Record your new height and weight </h2><br>
 
 <%= form_tag("/observations", method: "post") do |f|%>
@@ -13,6 +14,6 @@
   <%= submit_tag("Submit", class:"btn btn-primary btn-lg") %>
 <% end %>
 
+	  </div>
 	</div>
-
 </div>
