--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,6 +1,6 @@
-
-    <div class="landing-head">
-        <div class="container">
+<div class="landing-head">
+  <div class="container" id="login-form" >
+    <div class="half">
 
 <h2>Forgot your password?</h2>
 
@@ -18,7 +18,8 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
-</div>
+    </div>
+  </div>
 </div>
 
 
