--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,69 +1,79 @@
-<h2 class="text-center">Sign up</h2>
+<div class="landing-head" >
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+	<div class="container" id="login-form" >
+	  
+	  <div class="half">
 
-  <div class="field">
-    <%= f.label :firstname %><br />
-    <%= f.text_field :firstname, autofocus: true, class: "form-control" %>
+      <h2 class="text-center">Sign up</h2>
+
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= devise_error_messages! %>
+        
+          <div class="field" >
+            <%= f.label :firstname %><br />
+            <%= f.text_field :firstname, autofocus: true, class: "form-control" %>
+          </div>
+        
+          <div class="field">
+            <%= f.label :lastname %><br />
+            <%= f.text_field :lastname, autofocus: true, class: "form-control"%>
+          </div>
+        
+          <div class="field">
+            <%= f.label :gender %><br />
+            <%= f.select :gender, [['Male', 'Male'], ['Female', 'Female'], ['Other', 'Other']], autofocus: true, class: "form-control" %>
+          </div>
+        
+          <div class="field">
+            <%= f.label :address%><br />
+            <%= f.text_field :address, autofocus: true, class: "form-control" %>
+          </div>
+        
+          <div class="field">
+            <%= f.label :city %><br />
+            <%= f.text_field :city, autofocus: true, class: "form-control" %>
+          </div>
+        
+          <div class="field">
+            <%= f.label :state%><br />
+            <%= f.select :state, us_states %>
+          </div>
+        
+          <div class="field">
+            <%= f.label :postal_code%><br />
+            <%= f.text_field :postal_code, autofocus: true, class: "form-control" %>
+          </div>
+        
+          <div class="field">
+            <%= f.label :birthday%><br />
+            <%= f.date_field :birthday, autofocus: true, class: "form-control" %>
+          </div>
+        
+          <div class="field">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, class: "form-control" %>
+          </div>
+        
+          <div class="field">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
+          </div>
+        
+          <div class="field">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
+          </div>
+          <br>
+          <div class="actions">
+            <%= f.submit "Sign up", class:"btn btn-primary btn-lg" %>
+          </div>
+        <% end %>
+        
+        <%= render "devise/shared/links" %>
+        
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :lastname %><br />
-    <%= f.text_field :lastname, autofocus: true, class: "form-control"%>
-  </div>
-
-  <div class="field">
-    <%= f.label :gender %><br />
-    <%= f.select :gender, [['Male', 'Male'], ['Female', 'Female'], ['Other', 'Other']], autofocus: true, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :address%><br />
-    <%= f.text_field :address, autofocus: true, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :city %><br />
-    <%= f.text_field :city, autofocus: true, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :state%><br />
-    <%= f.select :state, us_states %>
-  </div>
-
-  <div class="field">
-    <%= f.label :postal_code%><br />
-    <%= f.text_field :postal_code, autofocus: true, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :birthday%><br />
-    <%= f.date_field :birthday, autofocus: true, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", class: "form-control" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
-  </div>
-  <br>
-  <div class="actions">
-    <%= f.submit "Sign up", class:"btn btn-primary btn-lg" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
