--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -23,10 +23,10 @@
                             <div class="input">
                               <input autocomplete="off" class="form-control" type="password" name="user[password]" id="user_password" />
                               <span class="help-text">
-                                <a href="/forgot-password" title="Recover a lost password" tabindex="-1">Forgot Password?</a>
-                                <br>
-                                <br>
-                                <a href="/users/sign_up" title="Sign up" tabindex="-1">Sign up</a></span>
+                                <a href="/users/password/new" title="Recover a lost password" tabindex="-1">Forgot Password?</a>
+
+                                <a href="/users/sign_up" title="Sign up" tabindex="-1">Sign up</a>
+                                </span>
                               </div>
 
                             </fieldset>
@@ -36,7 +36,7 @@
                     </form>
                     <% end %>
                 </section>
-                <section id="why-a-phr" class="promo-item half">
+                <section  class="promo-item half">
 
 					<figure class="half">
                     <img src="https://d32bg403aomlve.cloudfront.net/s/ch-static/img/health_in_one_place.222b073b8422.png" />
