made more changes to the UI

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,4 @@
+
 <div class="landing-head" >
 
 	<div class="container" id="login-form" >
@@ -68,7 +69,8 @@
           </div>
           <br>
           <div class="actions">
-            <%= f.submit "Sign up", class:"btn btn-primary btn-lg" %>
+            
+            <%= f.button "submit" ,class:"secondary large" %>
           </div>
         <% end %>
         
