--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -24,8 +24,7 @@
                               <input autocomplete="off" class="form-control" type="password" name="user[password]" id="user_password" />
                               <span class="help-text">
                                 <a href="/users/password/new" title="Recover a lost password" tabindex="-1">Forgot Password?</a>
-
-                                <a href="/users/sign_up" title="Sign up" tabindex="-1">Sign up</a>
+                                <a href="/users/sign_up" title="Sign up" tabindex="-1">Don't have a Health Portal account? Sign Up</a>
                                 </span>
                               </div>
 
