--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,14 +7,14 @@
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, class:"form-control" %>
-
-  <br>
-
-    <%= f.submit "Send me reset password instructions", class:"btn btn-primary btn-lg" %>
-
+</div>
+  </br>
+  <div class="actions">
+    <%= f.button "Send me reset password instructions" ,class:"secondary large" %>
+  </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
