--- a/app/views/observations/index.html.erb
+++ b/app/views/observations/index.html.erb
@@ -11,7 +11,9 @@
   <%= label_tag(:weight, "Weight (kg):") %>
   <%= number_field_tag(:weight) %>
   <br><br>
-  <%= submit_tag("Submit", class:"btn btn-primary btn-lg") %>
+    <div class="actions">
+    <%= button_tag( "Submit" ,class:"secondary large") %>
+  </div>
 <% end %>
 
 	  </div>
