added new picture

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -36,9 +36,9 @@
                     <% end %>
                 </section>
                 <section  class="promo-item half">
-
 					<figure class="half">
-                    <img src="https://d32bg403aomlve.cloudfront.net/s/ch-static/img/health_in_one_place.222b073b8422.png" />
+					    <%= image_tag "health_in_one_place.png" %>
+                  
 					</figure>
                 </section>
             </article>
