--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -69,7 +69,7 @@
           </div>
           <br>
           <div class="actions">
-            <%= f.submit "Sign up", class:"secondary large" %>
+            <%= f.button "Sign up" , class:"secondary large" %>
           </div>
         <% end %>
 
