making more modifications

--- a/app/views/basic_info/edit.html.erb
+++ b/app/views/basic_info/edit.html.erb
@@ -50,8 +50,10 @@
   <%= f.email_field :email, autofocus: true, class: "form-control" %>
 </div>
   <br>
-
-  <%= f.submit %>
+    <div class="actions">
+      
+      <%= f.button "submit" ,class:"secondary large" %>
+    </div>
 
 <% end %>
 	</div>
