--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -47,7 +47,7 @@
     <div class="container">
         <span id="learn-more-arrow"></span>
         <article id="learn-more">
-            <section  class="grid alternating">
+            <section  class="grid">
                 <div class="col1of3" style="text-align:center;">
                     <h1>All your health in one place</h1>
                     <p> Health portal provides one place for all of the information you need to manage your health</p>
@@ -66,6 +66,57 @@
 
             </div>
 		</section>
+		
+		            <section  class="grid" style="background:#ebebeb;min-width: 960px;">
+		                <h1> Meet The Team</h1>
+		                <br>
+                <div id="AboutUs" class="col5" style="text-align:center;">
+                    
+                    <h3 style="color:#7bc144;"> Bhargavi Damodaran</h3>
+                     <p>bdamodaran3	</p>
+                     <p>bdamodaran@gatech.edu</p>
+
+				</div>
+				<div class="col5" style="text-align:center;">
+					
+                    <h3 style="color:#7bc144;"> Guharaman Janakiraman </h3>
+                     <p>jguharaman</p>
+                     <p>jguharaman@gmail.com</p>
+
+
+				</div>
+				<div class="col5" style="text-align:center;">
+					
+                      <h3 style="color:#7bc144;">Mohit Nanda</h3>
+                     <p>mnanda3</p>
+                     <p>mht.nanda@gmail.com</p>
+
+            </div>
+           <span id="learn-more-arrow"></span>
+            		<div class="col5" style="text-align:center;">
+					
+                    <h3 style="color:#7bc144;">Nate Holland</h3>
+                     <p>nholland8</p>
+                     <p>natesholland@gatech.edu</p>
+
+            </div>
+            	<div class="col5" style="text-align:center;">
+					
+                     <h3 style="color:#7bc144;">Nebiyou Weldemeskel</h3>
+                     <p>nweldemeskel3</p>
+                     <p>nebsam24@gmail.com</p>
+
+            </div>
+            
+        <div class="col5" style="text-align:center;">
+					
+                     <h3 style="color:#7bc144;">Purity Mugambi</h3>
+                     <p>pmugambi3</p>
+                     <p>purity@gatech.edu</p>
+
+            </div>
+		</section>
+		
 
         </article>
     </div>
