finished about us

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -67,8 +67,9 @@
             </div>
 		</section>
 		
-		            <section  class="grid" style="background:#ebebeb;min-width: 960px;">
-		                <h1> Meet The Team</h1>
+		            <section  class="grid" style="background:#ebebeb;width:100%;">
+		                 <span id="learn-more-arrow"></span>
+		                <h1 class="center"> Meet The Team</h1>
 		                <br>
                 <div id="AboutUs" class="col5" style="text-align:center;">
                     
@@ -120,4 +121,5 @@
 
         </article>
     </div>
+</div>
 </div>
