change the styling on the button for conditions

--- a/app/views/conditions/index.html.erb
+++ b/app/views/conditions/index.html.erb
@@ -42,7 +42,10 @@
         <input type="radio" name="coronary" value="no" checked><text style="color:black; text-align:left;">&nbsp;No</text>
       </li>
     </div>
-    <%= submit_tag("Submit", class:"text-center") %>
+    <br>
+        <div class="actions">
+    <%= button_tag("Submit", class:"secondary large") %>
+    </div>
     </form>
 <% end %>
 
