Added more styling to team profile

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -74,46 +74,58 @@
                 <div id="AboutUs" class="col5" style="text-align:center;">
                     
                     <h3 style="color:#7bc144;"> Bhargavi Damodaran</h3>
+                    <h5 style="color:#045296">FHIR Specialist & Ruby Back End Developper</h5>
                      <p>bdamodaran3	</p>
                      <p>bdamodaran@gatech.edu</p>
+                     
 
 				</div>
 				<div class="col5" style="text-align:center;">
 					
                     <h3 style="color:#7bc144;"> Guharaman Janakiraman </h3>
+                    <h5 style="color:#045296">Project Manager & QA</h5>
                      <p>jguharaman</p>
                      <p>jguharaman@gmail.com</p>
+                     
 
 
 				</div>
 				<div class="col5" style="text-align:center;">
 					
                       <h3 style="color:#7bc144;">Mohit Nanda</h3>
+                      <h5 style="color:#045296">Project Manager & QA</h5>
                      <p>mnanda3</p>
                      <p>mht.nanda@gmail.com</p>
+                     
 
             </div>
            <span id="learn-more-arrow"></span>
             		<div class="col5" style="text-align:center;">
 					
                     <h3 style="color:#7bc144;">Nate Holland</h3>
+                    <h5 style="color:#045296">Architect & Back End Ruby Developper</h5>
                      <p>nholland8</p>
                      <p>natesholland@gatech.edu</p>
+                     
 
             </div>
             	<div class="col5" style="text-align:center;">
 					
                      <h3 style="color:#7bc144;">Nebiyou Weldemeskel</h3>
+                     <h5 style="color:#045296">UI Designer</h5>
                      <p>nweldemeskel3</p>
                      <p>nebsam24@gmail.com</p>
+                    
 
             </div>
             
         <div class="col5" style="text-align:center;">
 					
                      <h3 style="color:#7bc144;">Purity Mugambi</h3>
+                     <h5 style="color:#045296">UI Designer</h5>
                      <p>pmugambi3</p>
                      <p>purity@gatech.edu</p>
+                     
 
             </div>
 		</section>
