corrected typo errors

--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -75,7 +75,7 @@
                 <div id="AboutUs" class="col5" style="text-align:center;">
                     
                     <h3 style="color:#7bc144;"> Bhargavi Damodaran</h3>
-                    <h5 style="color:#045296">FHIR Specialist & Ruby Back End Developper</h5>
+                    <h5 style="color:#045296">FHIR Specialist & Back End Ruby Developer</h5>
                      <p>bdamodaran3	</p>
                      <p>bdamodaran@gatech.edu</p>
                      
@@ -104,7 +104,7 @@
             		<div class="col5" style="text-align:center;">
 					
                     <h3 style="color:#7bc144;">Nate Holland</h3>
-                    <h5 style="color:#045296">Architect & Back End Ruby Developper</h5>
+                    <h5 style="color:#045296">Architect & Back End Ruby Developer</h5>
                      <p>nholland8</p>
                      <p>natesholland@gatech.edu</p>
                      
@@ -113,7 +113,7 @@
             	<div class="col5" style="text-align:center;">
 					
                      <h3 style="color:#7bc144;">Nebiyou Weldemeskel</h3>
-                     <h5 style="color:#045296">UI Designer</h5>
+                     <h5 style="color:#045296">UI Designer & Developer</h5>
                      <p>nweldemeskel3</p>
                      <p>nebsam24@gmail.com</p>
                     
@@ -123,7 +123,7 @@
         <div class="col5" style="text-align:center;">
 					
                      <h3 style="color:#7bc144;">Purity Mugambi</h3>
-                     <h5 style="color:#045296">UI Designer</h5>
+                     <h5 style="color:#045296">UI Designer & Developer</h5>
                      <p>pmugambi3</p>
                      <p>purity@gatech.edu</p>
                      
