--- a/app/views/pages/index.html
+++ b/app/views/pages/index.html
@@ -104,7 +104,7 @@
             		<div class="col5" style="text-align:center;">
 					
                     <h3 style="color:#7bc144;">Nate Holland</h3>
-                    <h5 style="color:#045296">Architect & Back End Ruby Developer</h5>
+                    <h5 style="color:#045296">Architect & Fullstack Developer & Operations</h5>
                      <p>nholland8</p>
                      <p>natesholland@gatech.edu</p>
                      
